# rust-fs-tools

./: Cargo.toml
.github/workflows/: rust.yml
projects/fs_compare/: Cargo.toml
projects/fs_compare/src/: args.rs  main.rs
projects/fs_state_gen/: Cargo.toml
projects/fs_state_gen/src/: args.rs  main.rs
projects/run_rsync/: Cargo.toml
projects/run_rsync/src/: args.rs  main.rs
projects/utils/: Cargo.toml
projects/utils/src/: arg_parsers.rs  fs.rs  lib.rs
src/: args.rs  cli_args.rs  fs.rs  main.rs
