[workspace]
members = [
    "projects/fs_compare",
    "projects/fs_state_gen",
    "projects/run_rsync",
    "projects/utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sailesh Bellamkonda <4201725+SaileshBellamkonda@users.noreply.github.com>"]
documentation = "https://github.com/SaileshBellamkonda/rust-fs-tools"

[workspace.dependencies]
chrono = "0.4.33"
jwalk = "0.8.1"
clap = { version = "4.5.1", features = ["derive", "string"] }
rayon = "1.8.1"
bincode = { version = "2.0.0-rc", features = ["serde"] }
num_cpus = "1.16.0"
uuid = {version = "1.7.0", features = ["v4","fast-rng"]}

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
