[package]
name = "fs_state_gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
description = "Generates a state file from a file system"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "string"] }
jwalk = "0.8.1"
num_cpus = "1.16.0"
rayon = "1.8.1"
bincode = { version = "2.0.0-rc", features = ["serde"] }

[dependencies.utils]
path = "../utils"

[[bin]]
name = "fs_state_gen"
path = "src/main.rs"
