[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
description = "Private utilities for the projects in current workspace"

[lib]
crate_type = ["lib"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
jwalk = "0.8.1"
rayon = "1.8.1"
bincode = { version = "2.0.0-rc", features = ["serde"] }